@@ -1,4 +1,0 @@
-# Import the sipconfig.py for the correct python3 version and normal or debug
-# build.
-
-import sys
